Added Spring Security in the Item and Transaction Service